Se agregan algunas recetas

--- a/Páginas/recetas.html
+++ b/Páginas/recetas.html
@@ -31,11 +31,11 @@
         <section class="section-recetas">
             <main class="grid-container">
                 <div class="grid-item" id="Titulo">Recetas para tu Gin</div>
-                <div class="grid-item" id="receta1">Receta 1</div>
+                <div class="grid-item" id="receta1">Receta 1: Negroni</div>
                 <div class="grid-item" id="fotorec1">Foto 1</div>
-                <div class="grid-item" id="receta2">Receta 2</div>
+                <div class="grid-item" id="receta2">Receta 2: Gin tonic</div>
                 <div class="grid-item" id="fotorec2">Foto 2</div>
-                <div class="grid-item" id="receta3">Receta 3</div> 
+                <div class="grid-item" id="receta3">Receta 3: Toc Toc</div> 
                 <div class="grid-item" id="fotorec3">Foto 3</div>
                 <div class="grid-item" id="receta4">Receta 4</div>
                 <div class="grid-item" id="fotorec4">Foto 4</div>
