Se agregan las 2 primeras recetas

--- a/Páginas/nuestro-gin.html
+++ b/Páginas/nuestro-gin.html
@@ -31,8 +31,7 @@
         <section class="Home_Nuestro">
             <div>
                 <table class="ingredientes">
-                    <!-- Pongo etiqueta thead y tbody para separar por secciones. En thead se usa para cada celda la 
-                    etiqueta th, para darle formato de negrita -->
+                    <!-- Pongo etiqueta thead y tbody para separar por secciones. En thead se usa para cada celda la etiqueta th, para darle formato de negrita -->
                     <thead>
                         <tr>
                             <!-- Colspan se usa para combinar celdas horizontalmente -->
