--- a/Páginas/recetas.html
+++ b/Páginas/recetas.html
@@ -31,10 +31,31 @@
         <section class="section-recetas">
             <main class="grid-container">
                 <div class="grid-item" id="Titulo">Recetas para tu Gin</div>
-                <div class="grid-item" id="receta1">Receta 1: Negroni</div>
-                <div class="grid-item" id="fotorec1">Foto 1</div>
-                <div class="grid-item" id="receta2">Receta 2: Gin tonic</div>
-                <div class="grid-item" id="fotorec2">Foto 2</div>
+                <div class="grid-item" id="receta1"><span>Negroni:</span>Ingredientes
+                    <ul>
+                        <li>30 ml de Campari</li>
+                        <li>30 ml de gin</li>
+                        <li>30 ml de vermut rojo</li>
+                        <li>Piel de naranja</li>
+                        <li>Hielo</li>
+                    </ul>
+                    Añade todos los ingredientes a tu coctelera excepto la corteza de naranja y mézclalo durante unos pocos segundos.
+                    Sírvelo en una copa con hielo y la corteza de naranja y ya lo tienes.
+                </div>
+                <div class="grid-item" id="fotorec1"><img src="../Images/NEGRONI.jpg" alt="Negroni"></div>
+                <div class="grid-item" id="receta2"><span>Gin tonic:</span>
+                    <ul>
+                        <li>50 ml de gin</li>
+                        <li>200 ml de tónica</li>
+                        <li>1 rodaja de naranja o limón</li>
+                        <li>Hielo</li>
+                        <li>Opcional: Una o dos bayas de enebro</li>
+                    </ul>
+                    Llenar una copa globo con abundante hielo hasta enfriarla por completo. Eliminar el exceso de líquido.
+                    Añadir el gin sobre el hielo y exprimir la lima (sin la piel blanca) sobre la preparación. Añadir limon o naranja a la copa y las bayas de enebro y revolver el trago para armonizar el contenido. 
+                    Para finalizar, inclinar la copa y verter el agua tónica fría por un lado. Unificar suavemente una sola vez con la cuchara mezcladora.
+                </div>
+                <div class="grid-item" id="fotorec2"><img src="https://assets.unileversolutions.com/recipes-v2/218689.jpg" alt="Gin Tonic"></div>
                 <div class="grid-item" id="receta3">Receta 3: Toc Toc</div> 
                 <div class="grid-item" id="fotorec3">Foto 3</div>
                 <div class="grid-item" id="receta4">Receta 4</div>
