Se agregaron todas las recetas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
                 </ul>
             </nav>              
         </header>
+        <div class="Nav-responsive">
+            <ul>
+                <li><a class="active" href="#">Home</a></li>
+                <li><a href="./Páginas/nuestro-gin.html">Nuestro Gin</a></li>
+                <li><a href="./Páginas/galería.html">Galería</a></li>
+                <li><a href="./Páginas/recetas.html">Recetas</a></li>
+                <li><a href="./Páginas/contacto.html">Contacto</a></li>
+            </ul>
+        </div>
         <section class="Home_section">
             <div>
 
