--- a/Páginas/nuestro-gin.html
+++ b/Páginas/nuestro-gin.html
@@ -11,15 +11,16 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     </head>
     <body>
         <header>
             <nav class="menu">
-                <img class="Artemis_Logo" src="../Images/Artemis Negro 2.png" alt="Logo Artemis">
+                <a href="../index.html"><img class="Artemis_Logo animate__animated animate__fadeIn" src="../Images/Artemis Negro 2.png" alt="Logo Artemis"></a>
                 <button class="boton">
-                    <i class="fas fa-bars"></i>
+                    <a href="#nav-target"><i class="fas fa-bars"></i></a>
                 </button>
-                <ul class="Nav Nav-visible">
+                <ul class="Nav Nav-visible animate__animated animate__fadeIn">
                     <li><a href="../index.html">Home</a></li>
                     <li><a class="active" href="../Páginas/nuestro-gin.html">Nuestro Gin</a></li>
                     <li><a href="../Páginas/galería.html">Galería</a></li>
@@ -28,30 +29,24 @@
                 </ul>
             </nav>              
         </header>
-        <section class="Home_Nuestro">
-            <div>
-                <table class="ingredientes">
-                    <!-- Pongo etiqueta thead y tbody para separar por secciones. En thead se usa para cada celda la etiqueta th, para darle formato de negrita -->
-                    <thead>
-                        <tr>
-                            <!-- Colspan se usa para combinar celdas horizontalmente -->
-                            <th>Ingredientes</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Cardamomo, enebro y canela</td>
-                        </tr>
-                        <tr>
-                            <td>Romero y laurel</td>
-                        </tr>
-                        <tr>
-                            <td>Cáscara de naranja y limon</td>
-                        </tr>
-                    </tbody>
-                </table>    
-            </div>
-        </section>
+        <div class="Nav-responsive" id="nav-target">
+            <a href="#" class="close-button">X</a>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a class="active" href="../Páginas/nuestro-gin.html">Nuestro Gin</a></li>
+                <li><a href="../Páginas/galería.html">Galería</a></li>
+                <li><a href="../Páginas/recetas.html">Recetas</a></li>
+                <li><a href="../Páginas/contacto.html">Contacto</a></li>
+            </ul>
+        </div>        
+        <main class="Home_Nuestro grid-container2">
+            <div class="grid-item2 ingredientes">Ingredientes</div>
+            <div class="grid-item2 ingredientes1"><a href="https://es.wikipedia.org/wiki/Elettaria_cardamomum" target="_blank">Cardamomo</a> <a href="https://es.wikipedia.org/wiki/Juniperus_communis" target="_blank">enebro</a> <a href="https://es.wikipedia.org/wiki/Cinnamomum_verum" target="_blank">canela</a></div>
+            <div class="grid-item2 ingredientes2"><a href="https://es.wikipedia.org/wiki/Salvia_rosmarinus">Romero</a> <a href="">laurel</a></div>
+            <div class="grid-item2 ingredientes3"><a href="https://es.wikipedia.org/wiki/C%C3%A1scara_(ingrediente)">Cáscara de naranja y limon</a></div> 
+        </main>
+        <div>Informacion de la botella</div>
+
         <footer>
             <div class="aclaraciones">
                 <p>beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
