--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
             </ul>
         </div>
         <section class="Home_section">
-            <div>
-
+            <div class="grid-home">
+                <div>GIN ARTEMIS, producto nacional, nacido en Córdoba. Su incomparable sabor es el resultado de la selección de botánicos naturales y el riguroso proceso de destilación. Elaborado artesanalmente a base de alcohol de cereales y enebro</div>
+                <div><img src="./Images/_JMG6145.jpg"></div>
+                <div><iframe src="./Páginas/galería.html" frameborder="0"></iframe></div>
+                <div>Nota de la cata, aromas y visual.</div>
+                <div>Ingredientes con fotos como aconcagua</div>
+                <div>Contactos útiles MAXI GASTON</div>
             </div>
         </section>
         <footer>
