Se corrigen los nombres de las imagenes, ya que no funcionaban porque utilizaban guión bajo (_)

--- a/Páginas/galería.html
+++ b/Páginas/galería.html
@@ -46,22 +46,22 @@
             </div>            
             <div class="galeria_principal">
                 <a href="#target1"><video src="../Images/4MOV.MOV" autoplay loop height="200px"></video></a>
-                <a href="#target2"><img src="../Images/_JMG6125.jpg" alt="Imagen gin" height="200px"></a>
-                <a href="#target3"><img src="../Images/_JMG6063.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target4"><img src="../Images/_JMG6074.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target5"><img src="../Images/_JMG6080.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target6"><img src="../Images/_JMG6082.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target7"><img src="../Images/_JMG6094.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target8"><img src="../Images/_JMG6100.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target9"><img src="../Images/_JMG6102.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target10"><img src="../Images/_JMG6110.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target11"><img src="../Images/_JMG6112.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target12"><img src="../Images/_JMG6131.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target13"><img src="../Images/_JMG6133.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target14"><img src="../Images/_JMG6139.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target15"><img src="../Images/_JMG6142.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target16"><img src="../Images/_JMG6145.jpg" alt="Galería gin" height="200px"></a>
-                <a href="#target17"><img src="../Images/_JMG6154.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target2"><img src="../Images/JMG6125.jpg" alt="Imagen gin" height="200px"></a>
+                <a href="#target3"><img src="../Images/JMG6063.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target4"><img src="../Images/JMG6074.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target5"><img src="../Images/JMG6080.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target6"><img src="../Images/JMG6082.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target7"><img src="../Images/JMG6094.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target8"><img src="../Images/JMG6100.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target9"><img src="../Images/JMG6102.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target10"><img src="../Images/JMG6110.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target11"><img src="../Images/JMG6112.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target12"><img src="../Images/JMG6131.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target13"><img src="../Images/JMG6133.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target14"><img src="../Images/JMG6139.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target15"><img src="../Images/JMG6142.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target16"><img src="../Images/JMG6145.jpg" alt="Galería gin" height="200px"></a>
+                <a href="#target17"><img src="../Images/JMG6154.jpg" alt="Galería gin" height="200px"></a>
             </div>
             <div class="galeria_target" id="target1">
                 <a href="#target17" class="flecha"><i class="fas fa-arrow-left"></i></a>
