--- a/Páginas/nuestro-gin.html
+++ b/Páginas/nuestro-gin.html
@@ -2,16 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
         <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
-        <title>Artemis Handcrafted Gin - Nuestro Gin</title> 
-        <link rel="stylesheet" href="../Estilos/style.css">
+        <title>Artemis Handcrafted Gin - Home</title> 
+        <!-- <link rel="stylesheet" href="../Estilos/style.css"> -->
+        <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css">
         <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
-        <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+         <!-- Bootstrap CSS -->
+        <link href="../bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     </head>
     <body>
         <header>
@@ -58,5 +62,8 @@
                 <p id="copyright">Copyright 2022</p>
             </div>
         </footer>
+        <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>    
 </html>
