--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- <link rel="stylesheet" href="./Estilos/style.css"> -->
         <link rel="stylesheet" href="./Estilos/style-con-bootstrap.css">
         <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
-        <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
+        
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -68,7 +68,8 @@
         <section class="home-section">
             <div class="grid-home container">
                 <div class="row pt-3">
-                    <div class="grid-home-item description col-6 col-md-8 fs-4 bg-dark text-white" style="--bs-bg-opacity: .7;"><span class="fs-3 fw-bold">GIN ARTEMIS</span>, producto nacional, nacido en Córdoba. Su incomparable sabor es el resultado de la selección de botánicos naturales y el riguroso proceso de destilación. Elaborado artesanalmente a base de alcohol de cereales y enebro
+                    <div class="grid-home-item description col-12 col-md-6 col-lg-8 bg-dark text-white" style="--bs-bg-opacity: .7;"><span class="fw-bold">GIN ARTEMIS</span>, producto nacional, nacido en Córdoba. Su incomparable sabor es el resultado de la selección de botánicos naturales y el riguroso proceso de destilación. Elaborado artesanalmente a base de alcohol de cereales y enebro
+                        <div>Propiedades de la botella:</div>
                         <ul class="">
                             <li class="">Contenido: 500 mL.</li>
                             <li class="">Peso: 500 gr</li>
@@ -76,17 +77,17 @@
                             <li class="">Tapon: Corcho sintético tipo T</li>
                           </ul>
                     </div>
-                    <div class="grid-home-item botellaIMG col-6 col-md-3 offset-md-1"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
+                    <div class="grid-home-item botellaIMG col-6 offset-3 col-lg-3 offset-lg-1 d-md-block pt-3"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
                 </div>    
                 <div class="grid-home-item cata row text-white bg-dark my-3 p-2" style="--bs-bg-opacity: .7;">Nota de la cata, aromas y visual.</div>
                 <div class="grid-home-item ingredientes row align-items-center bg-dark" style="--bs-bg-opacity: .7;">
-                    <div class="grid-ingredientes enebroIMG offset-md-1 col-md-2"><img class="img-fluid" src="./Images/bayas-enebro.png" alt="Enebro"></div>
-                    <div class="grid-ingredientes cascarasIMG col-md-2"><img class="img-fluid" src="./Images/cascaras.png" alt="Cascaras"></div>
-                    <div class="grid-ingredientes cardamomoIMG col-md-2"><img class="img-fluid" src="./Images/cardamomo.png" alt="Cardamomo"></div>
-                    <div class="grid-ingredientes canelaIMG col-md-2"><img class="img-fluid" src="./Images/canela.png" alt="Canela"></div>
-                    <div class="grid-ingredientes coriandroIMG col-md-2"><img class="img-fluid" src="./Images/coriandro.png" alt="Coriandro"></div>
+                    <div class="grid-ingredientes enebroIMG offset-md-1 col-md-2 col-4"><img class="img-fluid" src="./Images/bayas-enebro.png" alt="Enebro"></div>
+                    <div class="grid-ingredientes cascarasIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cascaras.png" alt="Cascaras"></div>
+                    <div class="grid-ingredientes cardamomoIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cardamomo.png" alt="Cardamomo"></div>
+                    <div class="grid-ingredientes canelaIMG col-md-2 offset-md-0 col-4 offset-2"><img class="img-fluid" src="./Images/canela.png" alt="Canela"></div>
+                    <div class="grid-ingredientes coriandroIMG col-md-2 col-4"><img class="img-fluid" src="./Images/coriandro.png" alt="Coriandro"></div>
                 </div>
-                <div class="row text-white justify-content-center bg-dark" style="--bs-bg-opacity: .7;">    
+                <div class="row text-white justify-content-center bg-dark d-none d-md-flex" style="--bs-bg-opacity: .7;">    
                     <div class="grid-ingredientes enebro offset-md-0 col-md-2 text-center">Bayas de Enebro</div>            
                     <div class="grid-ingredientes cascaras col-md-2 text-center">Cáscaras de naranja y limón</div>                    
                     <div class="grid-ingredientes cardamomo col-md-2 text-center">Cardamomo</div>                    
@@ -97,17 +98,24 @@
             </div>
         </section>
         <footer>
-            <div class="aclaraciones">
-                <p>beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
-            </div>
-            <div class="social-media">
-                <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
-            <div class="autor">
-                <p id="autor">autor: Gaston Pero</p>
-                <p id="copyright">Copyright 2022</p>
+            <div class="container-fluid bg-artemis">
+                <div class="container pt-3">
+                    <div class="row">
+                        <div class="aclaraciones col-md-6 col-8">
+                            <p class="text-white text-uppercase">beber con moderación | prohibida su venta a menores de 18 años | si conducis, no tomes alcohol</p>
+                        </div>
+                        <div class="social-media col-1 fs-1 offset-md-5 offset-3">
+                            <a href="https://www.instagram.com/destileria.artemis/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
+                        </div>
+                        <div class="autor">
+                            <p class="text-white text-uppercase my-0" id="autor">autor: Gaston Pero</p>
+                            <p class="text-white text-uppercase" id="copyright">Copyright 2022</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
+    <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
