Se actualiza nuestro gin

--- a/Páginas/galería.html
+++ b/Páginas/galería.html
@@ -71,97 +71,97 @@
             </div>
             <div class="galeria_target" id="target2">
                 <a href="#target1" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6125.jpg" alt="Imagen gin">
+                <img src="../Images/JMG6125.jpg" alt="Imagen gin">
                 <a href="#target3" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target3">
                 <a href="#target2" class="flecha"><i class="fas fa-arrow-left"></i></a>    
-                <img src="../Images/_JMG6063.jpg" alt="Galería gin">
+                <img src="../Images/JMG6063.jpg" alt="Galería gin">
                 <a href="#target4" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target4">
                 <a href="#target3" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6074.jpg" alt="Galería gin">
+                <img src="../Images/JMG6074.jpg" alt="Galería gin">
                 <a href="#target5" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target5">
                 <a href="#target4" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6080.jpg" alt="Galería gin">
+                <img src="../Images/JMG6080.jpg" alt="Galería gin">
                 <a href="#target6" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target6">
                 <a href="#target5" class="flecha"><i class="fas fa-arrow-left"></i></a>    
-                <img src="../Images/_JMG6082.jpg" alt="Galería gin">
+                <img src="../Images/JMG6082.jpg" alt="Galería gin">
                 <a href="#target7" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target7">
                 <a href="#target6" class="flecha"><i class="fas fa-arrow-left"></i></a>    
-                <img src="../Images/_JMG6094.jpg" alt="Galería gin">
+                <img src="../Images/JMG6094.jpg" alt="Galería gin">
                 <a href="#target8" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target8">
                 <a href="#target7" class="flecha"><i class="fas fa-arrow-left"></i></a>    
-                <img src="../Images/_JMG6100.jpg" alt="Galería gin">
+                <img src="../Images/JMG6100.jpg" alt="Galería gin">
                 <a href="#target9" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target9">
                 <a href="#target8" class="flecha"><i class="fas fa-arrow-left"></i></a>    
-                <img src="../Images/_JMG6102.jpg" alt="Galería gin">
+                <img src="../Images/JMG6102.jpg" alt="Galería gin">
                 <a href="#target10" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target10">
                 <a href="#target9" class="flecha"><i class="fas fa-arrow-left"></i></a>    
-                <img src="../Images/_JMG6110.jpg" alt="Galería gin">
+                <img src="../Images/JMG6110.jpg" alt="Galería gin">
                 <a href="#target11" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target11">
                 <a href="#target10" class="flecha"><i class="fas fa-arrow-left"></i></a>    
-                <img src="../Images/_JMG6112.jpg" alt="Galería gin">
+                <img src="../Images/JMG6112.jpg" alt="Galería gin">
                 <a href="#target12" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target12">
                 <a href="#target11" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6131.jpg" alt="Galería gin">
+                <img src="../Images/JMG6131.jpg" alt="Galería gin">
                 <a href="#target13" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target13">
                 <a href="#target12" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6133.jpg" alt="Galería gin">
+                <img src="../Images/JMG6133.jpg" alt="Galería gin">
                 <a href="#target14" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target14">
                 <a href="#target13" class="flecha"><i class="fas fa-arrow-left"></i></a>   
-                <img src="../Images/_JMG6139.jpg" alt="Galería gin">
+                <img src="../Images/JMG6139.jpg" alt="Galería gin">
                 <a href="#target15" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target15">
                 <a href="#target14" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6142.jpg" alt="Galería gin">
+                <img src="../Images/JMG6142.jpg" alt="Galería gin">
                 <a href="#target16" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>    
             <div class="galeria_target" id="target16">
                 <a href="#target15" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6145.jpg" alt="Galería gin">
+                <img src="../Images/JMG6145.jpg" alt="Galería gin">
                 <a href="#target17" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
             <div class="galeria_target" id="target17">
                 <a href="#target16" class="flecha"><i class="fas fa-arrow-left"></i></a>
-                <img src="../Images/_JMG6154.jpg" alt="Galería gin">
+                <img src="../Images/JMG6154.jpg" alt="Galería gin">
                 <a href="#target1" class="flecha"><i class="fas fa-arrow-right"></i></a>
                 <a href="#" class="close-button">X</a>
             </div>
