--- a/index.html
+++ b/index.html
@@ -80,13 +80,15 @@
                     <div class="grid-home-item botellaIMG col-6 offset-3 col-lg-3 offset-lg-1 d-md-block pt-3"><img src="./Images/JMG6145.jpg" class="img-fluid"></div>
                 </div>    
                 <div class="grid-home-item cata row text-white bg-dark my-3 p-2" style="--bs-bg-opacity: .7;">Nota de la cata, aromas y visual.</div>
-                <div class="grid-home-item ingredientes row align-items-center bg-dark" style="--bs-bg-opacity: .7;">
-                    <div class="grid-ingredientes enebroIMG offset-md-1 col-md-2 col-4"><img class="img-fluid" src="./Images/bayas-enebro.png" alt="Enebro"></div>
-                    <div class="grid-ingredientes cascarasIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cascaras.png" alt="Cascaras"></div>
-                    <div class="grid-ingredientes cardamomoIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cardamomo.png" alt="Cardamomo"></div>
-                    <div class="grid-ingredientes canelaIMG col-md-2 offset-md-0 col-4 offset-2"><img class="img-fluid" src="./Images/canela.png" alt="Canela"></div>
-                    <div class="grid-ingredientes coriandroIMG col-md-2 col-4"><img class="img-fluid" src="./Images/coriandro.png" alt="Coriandro"></div>
-                </div>
+                <a href="./Páginas/nuestro-gin.html">
+                    <div class="grid-home-item ingredientes row align-items-center bg-dark" style="--bs-bg-opacity: .7;">
+                        <div class="grid-ingredientes enebroIMG offset-md-1 col-md-2 col-4"><img class="img-fluid" src="./Images/bayas-enebro.png" alt="Enebro"></div>
+                        <div class="grid-ingredientes cascarasIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cascaras.png" alt="Cascaras"></div>
+                        <div class="grid-ingredientes cardamomoIMG col-md-2 col-4"><img class="img-fluid" src="./Images/cardamomo.png" alt="Cardamomo"></div>
+                        <div class="grid-ingredientes canelaIMG col-md-2 offset-md-0 col-4 offset-2"><img class="img-fluid" src="./Images/canela.png" alt="Canela"></div>
+                        <div class="grid-ingredientes coriandroIMG col-md-2 col-4"><img class="img-fluid" src="./Images/coriandro.png" alt="Coriandro"></div>
+                    </div>
+                </a>
                 <div class="row text-white justify-content-center bg-dark d-none d-md-flex" style="--bs-bg-opacity: .7;">    
                     <div class="grid-ingredientes enebro offset-md-0 col-md-2 text-center">Bayas de Enebro</div>            
                     <div class="grid-ingredientes cascaras col-md-2 text-center">Cáscaras de naranja y limón</div>                    
