Nuestro gin semilisto

--- a/Páginas/nuestro-gin.html
+++ b/Páginas/nuestro-gin.html
@@ -68,8 +68,8 @@
                 <div class="container">
                             <div class="row">
                                 
-                                <div class="grid-item2 ingredientes col-4 offset-4 text-center bg-artemis mt-3">Ingredientes</div>
-                                <ul class="list-group list-group-flush col-10 offset-1 col-md-8 offset-md-0">
+                                <div class="grid-item2 ingredientes col-8 offset-2 col-md-4 offset-md-4 text-center bg-artemis mt-3">Ingredientes</div>
+                                <ul class="list-group list-group-flush col-10 offset-1 col-md-8 offset-md-0 my-3">
                                     <li class="list-group-item"><img src="../Images/bayas-enebro.png" width="70px"><a class="text-decoration-none" href="https://es.wikipedia.org/wiki/Juniperus_communis" target="_blank"><span>Enebro:</span></a> El principal botánico de nuestro gin, indispensable para su aroma particular.</li>
                                     <li class="list-group-item list-group-item-action list-group-item-dark"><img src="../Images/cardamomo.png" width="70px"><a class="text-decoration-none" href="https://es.wikipedia.org/wiki/Elettaria_cardamomum" target="_blank"><span>Cardamomo:</span></a> Botánico con fuerte aroma, con sabores detectables en nuestro gin</li>
                                     <li class="list-group-item"><img src="../Images/canela.png" width="70px"><a class="text-decoration-none" href="https://es.wikipedia.org/wiki/Cinnamomum_verum" target="_blank">Canela:</a> La rama de canela otorga un balance final al gin para poder disfrutar su maravilloso sabor</li>
