--- a/Páginas/nuestro-gin.html
+++ b/Páginas/nuestro-gin.html
@@ -102,6 +102,6 @@
         </footer>
         <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
         <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="./bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>    
 </html>
