se agrega Viewport en páginas que faltaba

--- a/Páginas/contacto.html
+++ b/Páginas/contacto.html
@@ -2,6 +2,7 @@
 <html lang="es">  
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="keywords" content="Artemis, Gin, Handcrafted, bebida, alcohol, escabio">
         <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
         <title>Artemis Handcrafted Gin - Contacto</title> 
