--- a/Páginas/nuestro-gin.html
+++ b/Páginas/nuestro-gin.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
          <!-- Bootstrap CSS -->
-        <link href="../bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="../bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     </head>
     <body>
@@ -39,7 +39,7 @@
                                   <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                  <a class="nav-link active" href="#">Nuestro Gin</a>
+                                  <a class="nav-link active" href="./nuestro-gin.html">Nuestro Gin</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="./galería.html">Galería</a>
@@ -102,6 +102,6 @@
         </footer>
         <script src="https://kit.fontawesome.com/41d6bd0b26.js" crossorigin="anonymous"></script>
         <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="../bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <script src="../bootstrap-5.1.3-dist/bootstrap-5.1.3-dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>    
 </html>
