--- a/Páginas/galería.html
+++ b/Páginas/galería.html
@@ -66,9 +66,9 @@
         <section id="sec_galery">
             <div class="container-fluid galery-section">
                 <div class="container">
-                    <div class="Video row justify-content-center">
-                        <div class="col-8 offset-2 col-xl-6 offset-xl-3"><h2>¿Cómo preparo un buen gin?</h2></div>
-                        <div class="col-10 offset-1 col-md-8 offset-md-2 col-xl-6 offset-xl-3"><iframe width="420" height="240" src="https://www.youtube.com/embed/bh6AcRrnKhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
+                    <div class="Video row">
+                        <div class="col-12 offset-0 text-center"><h2>¿Cómo preparo un buen gin?</h2></div>
+                        <div class="col-12 offset-0 text-center"><iframe width="420" height="240" src="https://www.youtube.com/embed/bh6AcRrnKhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
                     </div>           
                     <div id="carouselExampleControls" class="galeria_principal d-lg-none row carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
