--- a/Páginas/galería.html
+++ b/Páginas/galería.html
@@ -67,7 +67,7 @@
             <div class="container-fluid galery-section">
                 <div class="container">
                     <div class="Video row">
-                        <div class="col-12 offset-0 text-center"><h2>¿Cómo preparo un buen gin?</h2></div>
+                        <div class="col-12 offset-0 col-md-6 offset-md-3 text-center text-light bg-artemis font-artemis my-2 pt-2"><h2>¿Cómo preparo un buen gin?</h2></div>
                         <div class="col-12 offset-0 text-center"><iframe width="420" height="240" src="https://www.youtube.com/embed/bh6AcRrnKhk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
                     </div>           
                     <div id="carouselExampleControls" class="galeria_principal d-lg-none row carousel slide" data-bs-ride="carousel">
