--- a/Páginas/contacto.html
+++ b/Páginas/contacto.html
@@ -89,22 +89,20 @@
                                 <label for="floatingInput2">Mail</label>
                             </div>
                         </div>  
-                        <div class="row px-3 py-1 text-center text-white">
+                        <div class="row px-3 text-center text-white">
                             <div class="col-6 offset-3"><p>Sexo</p></div>
                         </div>
                         <div class="text-center text-white">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-                                <label class="form-check-label" for="inlineRadio1">M</label>
-                              </div>
-                              <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-                                <label class="form-check-label" for="inlineRadio2">F</label>
-                              </div>
-                              <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
-                                <label class="form-check-label" for="inlineRadio3">Otro</label>
-                              </div>
+                            <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+                                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+                                <label class="btn btn-outline-primary btn-light" for="btnradio1"><i class="fas fa-male"></i></label>
+                              
+                                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                                <label class="btn btn-outline-primary btn-light" for="btnradio2"><i class="fas fa-female"></i></label>
+                              
+                                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                                <label class="btn btn-outline-primary btn-light" for="btnradio3"><i class="fas fa-question"></i></label>
+                            </div>
                         </div>                            
                         <div class="fselect row px-3 py-1 text-center text-white">
                             <p>¿Ya probaste Artemis?</p>
