Se reutiliza el estilo con SCSS en todas las páginas del sitio

--- a/Páginas/contacto.html
+++ b/Páginas/contacto.html
@@ -7,7 +7,8 @@
         <meta name="description" content="Página oficial de Artemis Handcrafted Gin.">
         <title>Artemis Handcrafted Gin - Home</title> 
         <!-- <link rel="stylesheet" href="../Estilos/style.css"> -->
-        <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css">
+        <!-- <link rel="stylesheet" href="../Estilos/style-con-bootstrap.css"> -->
+        <link rel="stylesheet" href="../Estilos/style-con-scss.css">
         <link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
